# Ptex2Uv

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md  faces.blend
src/: CMakeLists.txt  PackingGrid.cpp  PackingGrid.hpp  Quad.hpp  QuadPatch.hpp  buildGraph.cpp  buildGraph.hpp  buildPatches.cpp  buildPatches.hpp  generateUVs.cpp  generateUVs.hpp  main.cpp  packPatches.cpp  packPatches.hpp
