set(SOURCE_FILES
    "buildGraph.hpp"
    "buildGraph.cpp"
    "buildPatches.hpp"
    "buildPatches.cpp"
    "PackingGrid.hpp"
    "PackingGrid.cpp"
    "packPatches.hpp"
    "packPatches.cpp"
    "generateUVs.hpp"
    "generateUVs.cpp"
    "Quad.hpp"
    "QuadPatch.hpp"
    "obj_writer.h"
    "obj_writer.cc"
    )

add_library(src
    ${SOURCE_FILES}
    )
